--- a/css/main.css
+++ b/css/main.css
@@ -128,12 +128,19 @@ body {
 }
 
 .card__title {
+  display: flex;
+  align-items: center;
+
   font-size: 2.225rem;
   text-decoration: none;
   font-weight: 600;
   color: #1eadff;
 
   margin-bottom: 0rem;
+}
+
+.title__icon {
+    padding-left: 0.5rem;
 }
 
 .card__title:hover {
